# approximateES

./: .gitignore  CMakeLists.txt  EnergyMinimizer.hpp  Short.hpp  approximateES.hpp  example-gco.cpp  fgbg-gco.cpp  stereo-orig.cpp
dense/examples/: CMakeLists.txt  dense_inference.cpp  dense_inference_additive.cpp  dense_inference_pr.cpp
dense/src/: densecrf.cpp
fgbg-data/: CMakeLists.txt  fgbg-data-gco.cpp
fgbg-spatialy-varying-smooth/: CMakeLists.txt  additive-fgbg-3channel-svs-gco.cpp  additive-fgbg-svs-gco.cpp  fgbg-3channel-svs-gco.cpp  fgbg-svs-gco.cpp
libgco/: CMakeLists.txt  GCoptimization.h
test/: simple_test.cpp
